--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,11 @@ test_gui.py
 *.pfx
 
 # Dictionary files for cracking
-*.txt
+# Exception for password dictionary files
+!top500.txt
+!top1000.txt
+!top3000.txt
+!top6000.txt
+!top19576.txt
 *.dic
 *.dict
